Changelog
 
[0.20.0] Sistema de Solicitação de Recessos completo - 25 NOV 2025
- Concluída a integração entre Front e Back End dos Recessos
- Implementadas as telas tanto do Funcionário quanto do Gestor

[0.19.3] Desenvolvimento Recessos III - 24 NOV 2025
- Parte do Funcionário 100% funcional
- Início da parte do Gestor

[0.19.2] Desenvolvimento Recessos II - 24 NOV 2025
- Integração entre Front e Backend dos recessos.
- Criação da tela de suporte para os funcionários.

[0.19.1] Desenvolvimento Recessos - 21 NOV 2025
- Início do desenvolvimento do back end do sistema de Recessos.
- Reforma no front end do sistema de Recessos.

[0.19.0] Sistema de Ocorrências Completo - 19 NOV 2025
- Concluída a integração entre Front e Back End das Ocorrências
- Implementadas as telas tanto do Funcionário quanto do Gestor

[0.18.3] Desenvolvimento Ocorrências III - 19 NOV 2025
- Upload de arquivos para as ocorrências.

[0.18.2] Desenvolvimento Ocorrências II - 14 NOV 2025
- Criação da tabela no banco de dados.
- Desenvolvimento do back end. 

[0.18.1] Desenvolvimento Ocorrências I - 14 NOV 2025
- Início do desenvolvimento do back end do sistema de Ocorrências.
- Reforma no front end do sistema de Ocorrências.

[0.18.0] Sistema de Licenças Completo - 14 NOV 2025
- Concluída a integração entre Front e Back End das Licenças
- Implementadas as telas tanto do Funcionário quanto do Gestor

[0.17.8] Painel de Controle RH - 14 NOV 2025
- Início do desenvolvimento do Painel de Controle do RH, que concentra as funções de 
  Aprovar/Rejeitar Licenças, Aprovar/Rejeitar Solicitações de Recessos e Gerenciar Ocorrências. 

[0.17.7] Integração Sistema de Licenças III - 12 NOV 2025
- Várias correções e validações adicionadas à pagina do Registro de Licenças.

[0.17.6] Integração Sistema de Licenças II - 11 NOV 2025
- Adicionado o upload de anexos das Licenças no Cloudinary. 

[0.17.5] Integração Sistema de Licenças - 07 NOV 2025
- Integração entre front e back end do Registro de Licenças.