@@ -3,6 +3,7 @@ Changelog
 [0.20.0] Sistema de Solicitação de Recessos completo - 25 NOV 2025
 - Concluída a integração entre Front e Back End dos Recessos
 - Implementadas as telas tanto do Funcionário quanto do Gestor
+- Botão de "Ajuda" funcional
 
 [0.19.3] Desenvolvimento Recessos III - 24 NOV 2025
 - Parte do Funcionário 100% funcional
